# tuatara

./: .gitignore  Makefile  README.md  pyproject.toml  readme.md
tuatara/: __init__.py  chunking.py  document.py  filtering.py  inference.py  pair_generation.py  parser.py  parsing.py  pipeline.py  serializing.py  utils.py
tuatara/prompts/: generate_pairs_standard.txt  summarize_document_standard.txt  summarize_page_standard.txt
