[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "tuatara"
dependencies = [
    "openai"
]
requires-python = ">=3.9"
authors = [
    {name = "Drew Ross", email = "drewross@ku.edu"}
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "nlp",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Repository = "https://github.com/dross20/tuatara"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[tool.ruff]
line-length = 88
target-version = "py39"
lint.select = ["E", "W", "F", "I"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"